[package]
name = "dotweb"
version = "0.1.0"
authors = ["Mat Sadler <mat@sourcetagsandcodes.com>"]
edition = "2021"


[dependencies]
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"]}
structopt = "0.3"
warp = "0.3"
